# django-elm

./: .gitignore  CHANGELOG.md  Dockerfile.dev  GEMINI.md  LICENSE.txt  README.md  README_pypi.md  dev.bash_aliases  docker-compose.yml  dodo.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  ruff.toml  tox.ini
.github/workflows/: ci.yml  publish.yml
.run/: addwidget.run.xml  compile.run.xml  compile_dev.run.xml  compile_prod.run.xml  elm.run.xml  npm.run.xml  runserver.run.xml  watch.run.xml
assets/badge/: v0.json
example/: base.html  requirements.txt
example/core/: forms.py  models.py  views.py
example/core/data/: courses.csv  extras.csv
example/core/management/commands/: seed.py
example/core/migrations/: 0001_initial.py
example/core/templates/core/: base.html  main.html  modelChoiceFieldWidget.html  modelMultipleChoiceFieldWidget.html  promotion_form.html  singletons.html  update_promotion.html
example/elm_programs/: apps.py
example/elm_programs/flags/: main.py
example/elm_programs/static_src/: .parcelrc  elm.json  package.json  pnpm-lock.yaml
example/elm_programs/static_src/djelm_src/: Main.ts
example/elm_programs/static_src/src/: Main.elm
example/elm_programs/templates/elm_programs/: main.html
example/elm_programs/templatetags/: main_tags.py
example/project/: settings.py  urls.py
example/test_elm/: apps.py
example/test_elm/static_src/: package.json
example/test_elm/static_src/djelm_src/: Main.ts
example/test_elm/static_src/src/: Main.elm
example/test_elm/templates/: base.html  main.html
example/test_elm/templatetags/: main_tags.py
example/tests_e2e/: test_e2e.py
ops/ci/: Dockerfile
scripts/: attach.sh  clipboard_service.sh  codeium_keys.sh  confidence_nvim.sh  kick-flip.sh  nvim.sh  ssh_keys.sh  up.sh
src/djelm/: __init__.py  apps.py  cookiecutter.py  elm.py  flag_loader.py  generators.py  npm.py  settings.py  strategy.py  subprocess.py  swc.py  utils.py  validate.py
src/djelm/codegen/: annotation.py  compiler.py  elm.py  expression.py  format.py  module_name.py  op.py  pattern.py  range.py  utils.py  writer.py
src/djelm/cookiecutters/entrypoint_template/: cookiecutter.json
src/djelm/cookiecutters/handlers_template/: cookiecutter.json
src/djelm/cookiecutters/program_flags_template/: cookiecutter.json
src/djelm/cookiecutters/program_model_template/: cookiecutter.json
src/djelm/cookiecutters/program_template/: cookiecutter.json
src/djelm/cookiecutters/program_widget_ModelChoiceField_template/: cookiecutter.json
src/djelm/cookiecutters/program_widget_ModelMultipleChoiceField_flags_template/: cookiecutter.json
src/djelm/cookiecutters/program_widget_ModelMultipleChoiceField_tags_template/: cookiecutter.json
src/djelm/cookiecutters/program_widget_ModelMultipleChoiceField_template/: cookiecutter.json
src/djelm/flags/: README.md  __init__.py  adapters.py  main.py  primitives.py
src/djelm/flags/form/: __init__.py  adapters.py  helpers.py  primitives.py  serializer.py
src/djelm/flags_template/: cookiecutter.json
src/djelm/forms/widgets/: README.md  (+1 more)
src/djelm/model_template/: cookiecutter.json
src/djelm/program_template/: cookiecutter.json
src/djelm/project_template/: cookiecutter.json
src/djelm/templatetags/: djelm_tags.py
src/djelm/widget_templates/: cookiecutter.json
src/elm/: __init__.py  apps.py  cookiecutter.py  effect.py  elm.py  npm.py  strategy.py  utils.py  validate.py
src/elm/program_template/: cookiecutter.json
src/elm/project_template/: cookiecutter.json
test_programs/: apps.py  models.py
test_programs/static_src/: package.json
test_programs/static_src/src/: Main1.elm  Main10.elm  Main2.elm  Main3.elm  Main4.elm  Main5.elm  Main6.elm  Main7.elm  Main8.elm  Main9.elm
tests/: conftest.py  fuzz_flags.py  settings.py  test_cli.py  test_flags.py  test_form_fields.py  test_form_helpers.py  test_strategy.py  test_subprocess.py  test_utils.py  test_validate.py
tests/codegen/: test_annotation.py  test_declaration.py  test_expression.py
(+43 files in other folders)
