[tool.poetry]
name = "djelm"
version = "0.1.0"
description = "A framework for using Elm programs in Django"
authors = ["Confidencemna02 <johh.terreu@gmail.com>"]
readme = "README.md"
keywords = ["django", "elm"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "Environment :: Web Environment",
    "Framework :: Django"
]

packages = [
    { include = "djelm", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
django = ">=4.2.5"
watchfiles = "^0.21.0"
pydantic = "^2.4.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
pytest-django = "^4.5.2"
tox = "^4.11.3"
pre-commit = "^3.4.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
